# NeuroFlow-HiDevs

./: .coverage  .dockerignore  .env  .env.example  .gitignore  .secrets.baseline  Makefile  README.md  build_log.txt  err.txt  generate_certs.py  init_files.txt  inspect_routes.py  pyproject.toml  reqs_output.txt  routes.txt  ruff_errors.txt  ruff_errors_utf8.txt  ruff_remaining.txt  ruff_remaining_errors.txt  ruff_remaining_errors_v2.txt  startup_err.txt  test.py  test_err.txt  test_fusion_err.txt  test_out.txt  test_out_clean.txt  test_output.txt  test_results4.txt  test_results5.txt  test_results_cmd.txt  test_results_final.txt  test_security.py  trace.txt
.github/workflows/: build.yml  ci.yml  preview.yml  quality-gate.yml  release.yml  sdk-publish.yml  security.yml
.mypy_cache/: missing_stubs
backend/: .env  Dockerfile  __init__.py  check_extractors.py  config.py  main.py  requirements.txt  test_provider.py  test_startup.py  worker.py
backend/api/: __init__.py  (+9 more)
docs/: api-contracts.md  architecture.md  deployment.md  retrospective.md  runbook.md
evaluation/: .gitkeep  ab_test.py  calibrate.py  calibration_results.json  generation_eval.py  generation_results.json  hyperparam_search.py  improvement_log.md  judge.py  quality_baseline.json  quality_final.json  retrieval_eval.py  retrieval_results.json
frontend/: Dockerfile  package-lock.json  package.json
infra/: docker-compose.prod.yml  docker-compose.yml
scripts/: verify_production.sh
sdk/: README.md  pyproject.toml
sdk/examples/: quickstart.py
sdk/neuroflow/: client.py  models.py
tmp/: migrate.py
(+16942 files in other folders)
