[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neuroflow-sdk"
version = "1.0.0"
description = "Python SDK for the NeuroFlow RAG API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.28.0",
    "pydantic>=2.4.0",
    "httpx-sse>=0.4.0"
]
